# ClaudeCodeClone

./: .gitignore  CMakeLists.txt  vcpkg.json
src/: main.cpp
src/api/: LLMClient.h  OpenRouterClient.cpp  OpenRouterClient.h
src/tools/: BashTool.cpp  BashTool.h  ReadTool.cpp  ReadTool.h  ToolRegistry.cpp  ToolRegistry.h  WriteTool.cpp  WriteTool.h  toolSpec.h
